--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div id="container">
        <div class="box">
+            <h1>Do you love me? <img src="Untitled design (5).png"
+            alt=""></h1>
             <button id="target">No</button>
             <button id="yes">Yes</button>
         </div>
