--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are you Love</title>
+    <title>Are you love?</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Center the title */
+        .center {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div id="container">
-       <div class="box">
-            <h1 class="center"> Do you love me?💞 <img src="Untitled design (5).png"
-            alt=""></h1>
-            <button id="target">No</button>
-            <button id="yes">Yes</button>
+    <div class="container">
+        <!-- Added class="center" to center align the title -->
+        <h1 class="center">Do you love me? 💞</h1>
+        <div class="options">
+            <!-- Separate buttons for "No" and "Yes" -->
+            <button id="noButton">No</button>
+            <button id="yesButton">Yes</button>
         </div>
+        <p id="response"></p>
     </div>
     <script src="script.js"></script>
 </body>
