--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are you love?</title>
+    <title>Do you love me?</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* Center the title */
-        .center {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
-        <!-- Added class="center" to center align the title -->
         <h1 class="center">Do you love me? 💞</h1>
         <div class="options">
-            <!-- Separate buttons for "No" and "Yes" -->
             <button id="noButton">No</button>
             <button id="yesButton">Yes</button>
         </div>
